--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -1,7 +1,7 @@
 nav{
     display:flex;
     justify-content: space-between;
-    background-color: #1d809f;
+    background-color: #FE7F2D;
     align-items: center;
     padding-right: 20px; 
     padding-left: 20px;
